small ui improvements https://github.com/CSCfi/beacon-openshift/issues/17#issuecomment-443894448

--- a/beacon-ui/app/assets/main.css
+++ b/beacon-ui/app/assets/main.css
@@ -114,6 +114,10 @@ md-card-content > div {
 	right: 10px;
 }
 
+#datasetNote {
+	color: #787878;
+}
+
 /* md-card-content ul {
 	padding: 0;
 	margin: 0;
@@ -133,7 +137,7 @@ md-card-content ul li {
 .table {
   width: 100%;
   max-width: 100%;
-  margin-bottom: 2rem;
+  margin-bottom: 0;
   background-color: #fff;
 	font-size:0.9em;
 }
@@ -150,17 +154,20 @@ md-card-content ul li {
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
-  text-align: left;
+  text-align: right;
   vertical-align: top;
   border-top: 0;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
+.table > thead  {
+	background-color: #fafafa;
+}
 .table > thead > tr > th {
-  font-weight: 400;
-  color: #757575;
-  vertical-align: bottom;
+	font-weight: bold;
+	color: #5f6368;
+	vertical-align: bottom;
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 .table > caption + thead > tr:first-child > th,
@@ -279,6 +286,12 @@ md-card-content ul li {
 .result-row .cardItem {
 	flex-grow: 1;
 }
+md-card #topCard {
+	background: #2196f3;
+	color: white;
+	border-top: solid 4px #1769aa;
+	box-shadow: #cccccc 0px 2px 5px 0px;
+}
 
 .result-row .resultCard span.md-title {
 	font-size: 1.1em;
@@ -286,12 +299,19 @@ md-card-content ul li {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	min-width: 300px;
+	font-weight: bold;
 }
 
 .beacon-api-version {
 	padding-left: 5px;
-	font-size: 0.7em;
-	color: #F57D20;
+	font-size: 0.8em;
+	color: #ffac33;
+}
+
+.md-button.md-default-theme.md-primary.md-raised, .md-button.md-primary.md-raised,
+.md-button.md-default-theme.md-primary.md-fab, .md-button.md-primary.md-fab {
+	color: rgba(255,255,255,0.87);
+	background-color: rgb(33, 150, 243);
 }
 
 .result-row .resultCard md-card-header-text {
